made the figure fixed size and it works much better. dictatorpage only yet

--- a/baseline_trials/Consent.html
+++ b/baseline_trials/Consent.html
@@ -72,7 +72,7 @@
         <li>After agreeing to participate, you can start immediately. Each part includes <b>specific instructions</b>.
               Please read them carefully, as <b>your decisions affect your final payment</b>.</li>
         <li>The study follows the instructions exactly. There is <b><u>no</u> hidden information or deception</b>.</li>
-        <li> The study is made up of 2 blocks. In total, you will make about <b>{{ C.NUM_DECISIONS_APPROX }} decisions</b>, and the study takes around <b>30 minutes</b>. </li>
+        <li> The study is made up of 2 blocks. In total, you will make about <b>{{ C.NUM_DECISIONS_APPROX }} decisions</b>, and the study takes around <b>{{ C.STUDY_TIME }} minutes</b>. </li>
       </ul>
 
   <!--    {{C.NUM_ROUNDS}}-->
@@ -106,7 +106,7 @@
       </p>
       <p>
           Charlotte Rossetti, Caroline Graf and Jörg Gross <br>
-          University of Zurich, Switzerland <br>
+          University of Zürich, Switzerland <br>
   <!--        <img/>-->
       </p>
 
