--- a/baseline_trials/DictatorPage.html
+++ b/baseline_trials/DictatorPage.html
@@ -89,11 +89,11 @@
 
                 // dictator stack
                 for (let i = 0; i < dictatorKeeps; i++) {
-                    $(`.coinstackD[data-index="${index}"]`).append('<div class="coin" style="left:calc(50% - 5.8vw);"></div>');
+                    $(`.coinstackD[data-index="${index}"]`).append('<div class="coin" style="left:calc(50% - 63px);"></div>');
                 }
                 // receiver stack
                 for (let i = 0; i < receiverGets; i++) {
-                    $(`.coinstackR[data-index="${index}"]`).append('<div class="coinR" style="left:calc(30% + 0.2vw)"></div>');
+                    $(`.coinstackR[data-index="${index}"]`).append('<div class="coinR" style="left:calc(30% - 2px)"></div>');
                 }
                 // number labels
                 $('#countD[data-index="' + index + '"]').text(`${dictatorKeeps}`);
@@ -107,11 +107,11 @@
 
                 // dictator stack
                 for (let i = 0; i < total_endowment; i++) {
-                    $('.coinstackD').append('<div class="coin" style="left:calc(50% - 5.8vw)"></div>');
+                    $('.coinstackD').append('<div class="coin" style="left:calc(50% - 63px)"></div>');
                 }
                 // receiver stack
                 for (let i = 0; i < receiver_endowment; i++) {
-                    $('.coinstackR').append('<div class="coinR" style="left:calc(50% + 0.2vw)"></div>');
+                    $('.coinstackR').append('<div class="coinR" style="left:calc(50% - 2px)"></div>');
                 }
                 // number labels
                 $('#countD').text(`${total_endowment}`);
@@ -179,10 +179,10 @@
 
                 // Add the specified number of coins
                 for (let i = 0; i < Dupdate; i++) {
-                    $('.coinstackD').append('<div class="coin" style="left:calc(50% - 5.8vw)"></div>');
+                    $('.coinstackD').append('<div class="coin" style="left:calc(50% - 63px)"></div>');
                 }
                 for (let i = 0; i < Rupdate; i++) {
-                    $('.coinstackR').append('<div class="coinR" style="left:calc(50% + 0.2vw)"></div>'); // previously: left:83
+                    $('.coinstackR').append('<div class="coinR" style="left:calc(50% - 2px)"></div>'); // previously: left:83
                 }
 
                 // Update the number labels
@@ -277,14 +277,14 @@
     }
 
     .number {
-        width: 40px; /* should not scale */
-        height: 40px; /* should not scale */
+        width: 30px; /* should not scale */
+        height: 30px; /* should not scale */
         flex-direction: column;
         text-align: center; /* Center-aligns the text */
         display: flex;
         justify-content: center;
         align-items: center;
-        font-size: 22px; /* sould not scale */
+        font-size: 18px; /* sould not scale */
         background-color: #e0e0e0;
         padding: 1.5px;
         border: 1.5px solid #000000;
@@ -356,7 +356,7 @@
       transform-origin: top left; /* Ensure scaling starts from top-left */
       transform: scale(1); /* Default scale */
       transition: transform 0.3s ease; /* Smooth scaling */
-      /* border:1px solid black; */
+      border:0px solid black;
       margin-left:auto;
       margin-right:auto;
     }
@@ -374,7 +374,7 @@
 
     .short-figure-container {
         width:75%;
-        height:10vw;  # shorter for dictator
+        height:100px;  # shorter for dictator
         margin-left:auto;
         margin-right:auto;
         text-align:center;
@@ -392,7 +392,24 @@
         font-size: 14px;
     }
 
-    @media (max-width: 1200px) { /* adjustments for smaller screens */
+    @media (min-width: 1300px) { /* adjustments for smaller screens */
+        .container {
+            width:50%; /* otherwise used margin-left:1vw; */
+        }
+        .number {
+            width: 40px; /* should not scale */
+            height: 40px; /* should not scale */
+            font-size: 22px; /* should not scale */
+        }
+    }
+
+    @media (max-width: 1300px) { /* adjustments for smaller screens */
+        .container {
+            width:60%; /* otherwise used margin-left:1vw; */
+        }
+    }
+
+    @media (max-width: 900px) { /* adjustments for smaller screens */
         .responsive-div {
             transform: scale(1.0); /* Scale to 80% for smaller screens */
         }
@@ -400,12 +417,7 @@
             width:80%; /* otherwise used margin-left:1vw; */
         }
         .figure-container {
-            width:80%; /* otherwise used margin-left:1vw; */
-        }
-        .number {
-            width: 30px; /* should not scale */
-            height: 30px; /* should not scale */
-            font-size: 18px; /* sould not scale */
+            width:100%; /* otherwise used margin-left:1vw; */
         }
         .norm {
             width: 80px; /* Width scales with viewport width */
@@ -419,11 +431,10 @@
             transform: scale(1.0); /* adjustments for smartphones */
         }
         .container {
-            width:90%; /* otherwise used margin-left:1vw; */
+            width:100%; /* otherwise used margin-left:1vw; */
         }
         .figure-container {
-            transform: scale(1.0); /* Scale up the figure elements */
-            min-width:10px;
+            width:100%; /* otherwise used margin-left:1vw; */
         }
         .number {
             width: 25px; /* should not scale */
@@ -438,27 +449,27 @@
     }
 
     .person-a {
-        left: calc(50% - 13.1vw);
-        font-size:1.0vw;
+        left: calc(50% - 136px);
+        font-size:10px;
         position: absolute;
     }
 
     .person-b {
-        left: calc(50% + 7.8vw);
-        font-size:1.0vw;
+        left: calc(50% + 80px);
+        font-size:10px;
         position: absolute;
     }
 
     .person-c {
         left: calc(50% - 1.9vw);
         top:87.5%;
-        font-size:1.0vw;
+        font-size:10px;
         position: absolute;
     }
 
     .you {
-        left:calc(50% - 12.2vw);
-        font-size:1.6vw;
+        left:calc(50% - 127px);
+        font-size:16px;
         color: red;
         position: absolute;
     }
@@ -470,24 +481,24 @@
     }
 
     .coin {
-        width: 1.8vw; /* Coins take the full width of the stack container */
+        width: 20px; /* Coins take the full width of the stack container */
         min-width:10px;
         height: 8px; /* Coin height is proportional to the width */
         border-radius: 50%;
         background: linear-gradient(145deg, #ffd700, #e6c200);
-        border: 0.1vw solid #FFFFFF; /* Border size scales with the coin size */
+        border: 1px solid #FFFFFF; /* Border size scales with the coin size */
         box-shadow: inset -3px -2px 5px rgba(0, 0, 0, 0.2);
         position: absolute;
         transform: translateX(-50%);
     }
 
     .coinR {
-        width: 1.8vw; /* Coins take the full width of the stack container */
+        width: 20px; /* Coins take the full width of the stack container */
         min-width:10px;
         height: 8px; /* Coin height is proportional to the width */
         border-radius: 50%;
         background: linear-gradient(145deg, #ffd700, #e6c200);
-        border: 0.1vw solid #FFFFFF; /* Border size scales with the coin size */
+        border: 1px solid #FFFFFF; /* Border size scales with the coin size */
         box-shadow: inset -3px -2px 5px rgba(0, 0, 0, 0.2);
         position: absolute;
         transform: translateX(-50%);
@@ -506,12 +517,11 @@
     }
 
     .coin-count-labelD {
-        font-size:1.4vw;
+        font-size:14px;
         color: #333; /* Adjust color as needed */
         position: absolute; /* Position relative to .container */
-        left: calc(50% - 4.5vw); /* Center horizontally before offsetting */
+        left: calc(50% - 50px); /* Center horizontally before offsetting */
         top: 23%; /* Move up; adjust value as needed */
-         /* transform: translateX(-50%);Adjust for exact centering */
         text-align: center; /* Align text */
     }
 
@@ -526,12 +536,11 @@
     }
 
     .coin-count-labelR {
-        font-size:1.4vw;
+        font-size:14px;
         color: #333; /* Adjust color as needed */
         position: absolute; /* Position relative to .figure-container */
-        left: calc(50% + 2.2vw); /* Center horizontally before offsetting */
+        left: calc(50% + 12px); /* Center horizontally before offsetting */
         top: -1%; /* Move up; adjust value as needed */
-        transform: translateX(-50%); /* Adjust for exact centering */
         text-align: center; /* Align text */
     }
 
@@ -556,31 +565,31 @@
     }
 
 
-    .coin:nth-child(12)  { top: 3.0vw; }
-    .coin:nth-child(11)  { top: 3.3vw; }
-    .coin:nth-child(10)  { top: 3.6vw; }
-    .coin:nth-child(9)  { top: 3.9vw; }
-    .coin:nth-child(8)  { top: 4.2vw; }
-    .coin:nth-child(7)  { top: 4.5vw; }
-    .coin:nth-child(6)  { top: 4.8vw; }
-    .coin:nth-child(5)  { top: 5.1vw; }
-    .coin:nth-child(4)  { top: 5.4vw; }
-    .coin:nth-child(3)  { top: 5.7vw; }
-    .coin:nth-child(2)  { top: 6.0vw; }
-    .coin:nth-child(1)  { top: 6.3vw; }
+    .coin:nth-child(12)  { top: 15px; }
+    .coin:nth-child(11)  { top: 19px; }
+    .coin:nth-child(10)  { top: 23px; }
+    .coin:nth-child(9)   { top: 27px; }
+    .coin:nth-child(8)   { top: 31px; }
+    .coin:nth-child(7)   { top: 35px; }
+    .coin:nth-child(6)   { top: 39px; }
+    .coin:nth-child(5)   { top: 43px; }
+    .coin:nth-child(4)   { top: 47px; }
+    .coin:nth-child(3)   { top: 51px; }
+    .coin:nth-child(2)   { top: 55px; }
+    .coin:nth-child(1)   { top: 59px; }
 
-    .coinR:nth-child(12)  { top: -1.7vw; }
-    .coinR:nth-child(11)   { top: -1.4vw; }
-    .coinR:nth-child(10)   { top: -1.1vw; }
-    .coinR:nth-child(9)   { top: -0.8vw; }
-    .coinR:nth-child(8)   { top: -0.5vw; }
-    .coinR:nth-child(7)   { top: -0.2vw; }
-    .coinR:nth-child(6)   { top: 0.1vw; }
-    .coinR:nth-child(5)   { top: 0.4vw; }
-    .coinR:nth-child(4)   { top: 0.7vw; }
-    .coinR:nth-child(3)   { top: 1.0vw; }
-    .coinR:nth-child(2)  { top: 1.3vw; }
-    .coinR:nth-child(1)  { top: 1.6vw; }
+    .coinR:nth-child(12) { top: -30px; }
+    .coinR:nth-child(11) { top: -26px; }
+    .coinR:nth-child(10) { top: -22px; }
+    .coinR:nth-child(9)  { top: -18px; }
+    .coinR:nth-child(8)  { top: -14px; }
+    .coinR:nth-child(7)  { top: -10px; }
+    .coinR:nth-child(6)  { top: -6px; }
+    .coinR:nth-child(5)  { top: -2px; }
+    .coinR:nth-child(4)  { top: 2px; }
+    .coinR:nth-child(3)  { top: 6px; }
+    .coinR:nth-child(2)  { top: 10px; }
+    .coinR:nth-child(1)  { top: 14px; }
 
 
 </style>
@@ -747,13 +756,13 @@
                     <img src="" style='width:10vw; position:absolute; top:3.8vw; left:calc(50% - 23.5vw)' class='dictatorCountryMap'>
                 {% endif %}
 
-                <img src="/static/{{ image }}" style="width:27vw; top:3vw; ">
+                <img src="/static/{{ image }}" style="width:280px; top:3vw; ">
 
                 {% if "0DG" in player.treatment or "2PP" in player.treatment %}
-                <div class="person-a" style="top:60%">
+                <div class="person-a" style="top:6vm">
                     <b>PERSON A</b>
                 </div>
-                <div class="person-b" style="top:61%">
+                <div class="person-b" style="top:3vm">
                     <b>PERSON B</b>
                 </div>
 
@@ -776,11 +785,11 @@
 
                 <span class='coinstack coinstackD'></span>
                 <div class="coin-count-labelD" id="countD"
-                     style="font-size:1.4vw; {% if '2PP' in player.treatment or '0DG' in player.treatment %}top: 50%;{% endif %}"></div>
+                     style="{% if '2PP' in player.treatment or '0DG' in player.treatment %}top: 50%;{% endif %}"></div>
 
                 <span class='coinstack coinstackR'></span>
                 <div class="coin-count-labelR" id="countR"
-                     style="font-size:1.4vw; {% if '2PP' in player.treatment or '0DG' in player.treatment %}top: -3%;{% endif %}"></div>
+                     style="{% if '2PP' in player.treatment or '0DG' in player.treatment %}top: 5%;{% endif %}"></div>
 
 
                 {% if "3PP" in player.treatment or "3PC" in player.treatment or player.treatment in C.COUNTRY_LIST %}
