--- a/baseline_trials/DictatorPage.html
+++ b/baseline_trials/DictatorPage.html
@@ -263,6 +263,7 @@
         height: 100vh;
         margin-top: 4vw;
         background-color: #f4f4f4;
+        border:1px solid black;
     }
 
     .number-row {
@@ -363,7 +364,7 @@
 
     .figure-container {
         width:75%;
-        height:21vw;
+        height:230px;
         /* top:2vw; */
         margin-left:auto;
         margin-right:auto;
@@ -426,15 +427,15 @@
         }
     }
 
-    @media (max-width: 600px) {
+    @media (max-width: 600px) { /* adjustments for smartphones */
         .responsive-div {
-            transform: scale(1.0); /* adjustments for smartphones */
+            width:100%;
         }
         .container {
             width:100%; /* otherwise used margin-left:1vw; */
         }
         .figure-container {
-            width:100%; /* otherwise used margin-left:1vw; */
+            width:90%; /* otherwise used margin-left:1vw; */
         }
         .number {
             width: 25px; /* should not scale */
@@ -461,8 +462,8 @@
     }
 
     .person-c {
-        left: calc(50% - 1.9vw);
-        top:87.5%;
+        left: calc(50% - 20px);
+        top:190px;
         font-size:10px;
         position: absolute;
     }
@@ -539,7 +540,7 @@
         font-size:14px;
         color: #333; /* Adjust color as needed */
         position: absolute; /* Position relative to .figure-container */
-        left: calc(50% + 12px); /* Center horizontally before offsetting */
+        left: calc(50% + 10px); /* Center horizontally before offsetting */
         top: -1%; /* Move up; adjust value as needed */
         text-align: center; /* Align text */
     }
@@ -565,30 +566,30 @@
     }
 
 
-    .coin:nth-child(12)  { top: 15px; }
-    .coin:nth-child(11)  { top: 19px; }
-    .coin:nth-child(10)  { top: 23px; }
-    .coin:nth-child(9)   { top: 27px; }
-    .coin:nth-child(8)   { top: 31px; }
-    .coin:nth-child(7)   { top: 35px; }
-    .coin:nth-child(6)   { top: 39px; }
-    .coin:nth-child(5)   { top: 43px; }
-    .coin:nth-child(4)   { top: 47px; }
-    .coin:nth-child(3)   { top: 51px; }
-    .coin:nth-child(2)   { top: 55px; }
+    .coin:nth-child(12)  { top: 26px; }
+    .coin:nth-child(11)  { top: 29px; }
+    .coin:nth-child(10)  { top: 32px; }
+    .coin:nth-child(9)   { top: 35px; }
+    .coin:nth-child(8)   { top: 38px; }
+    .coin:nth-child(7)   { top: 41px; }
+    .coin:nth-child(6)   { top: 44px; }
+    .coin:nth-child(5)   { top: 47px; }
+    .coin:nth-child(4)   { top: 50px; }
+    .coin:nth-child(3)   { top: 53px; }
+    .coin:nth-child(2)   { top: 56px; }
     .coin:nth-child(1)   { top: 59px; }
 
-    .coinR:nth-child(12) { top: -30px; }
-    .coinR:nth-child(11) { top: -26px; }
-    .coinR:nth-child(10) { top: -22px; }
-    .coinR:nth-child(9)  { top: -18px; }
-    .coinR:nth-child(8)  { top: -14px; }
-    .coinR:nth-child(7)  { top: -10px; }
-    .coinR:nth-child(6)  { top: -6px; }
-    .coinR:nth-child(5)  { top: -2px; }
-    .coinR:nth-child(4)  { top: 2px; }
-    .coinR:nth-child(3)  { top: 6px; }
-    .coinR:nth-child(2)  { top: 10px; }
+    .coinR:nth-child(12) { top: -19px; }
+    .coinR:nth-child(11) { top: -16px; }
+    .coinR:nth-child(10) { top: -13px; }
+    .coinR:nth-child(9)  { top: -10px; }
+    .coinR:nth-child(8)  { top: -7px; }
+    .coinR:nth-child(7)  { top: -4px; }
+    .coinR:nth-child(6)  { top: -1px; }
+    .coinR:nth-child(5)  { top: 2px; }
+    .coinR:nth-child(4)  { top: 5px; }
+    .coinR:nth-child(3)  { top: 8px; }
+    .coinR:nth-child(2)  { top: 11px; }
     .coinR:nth-child(1)  { top: 14px; }
 
 
@@ -643,12 +644,12 @@
                 <img src="" style='width:10vw; position:absolute; top:3.8vw; left:calc(50% - 23.5vw)' class='dictatorCountryMap'>
             {% endif %}
 
-            <img src="/static/{{ image }}" style="width:27vw; top:3vw; ">
+            <img src="/static/{{ image }}" style="width:280px; top:3vw; ">
 
-            <div class="person-a" style="top:60%">
+            <div class="person-a" style="top:65px">
                 <b>PERSON A</b>
             </div>
-            <div class="person-b" style="top:61%">
+            <div class="person-b" style="top:65px">
                 <b>PERSON B</b>
             </div>
 
@@ -659,24 +660,24 @@
 
             <span class='coinstack coinstackR' data-index="{{ dic_norm_decision.index }}"></span>
             <div class="coin-count-labelR" id="countR"
-                 style="{% if '2PP' in player.treatment or '0DG' in player.treatment %}top: -3%;{% endif %}"
+                 style="{% if '2PP' in player.treatment or '0DG' in player.treatment %}top: 5%;{% endif %}"
                  data-index="{{ dic_norm_decision.index }}"></div>
 
             {% if "3PP" in player.treatment or "3PC" in player.treatment or player.treatment in C.COUNTRY_LIST %}
-                <img src="/static/global/minus_button2.png" alt="-" style="position: absolute; width: 1.8vw; top: 50%; left:calc(50% - 7vw);">
+                <img src="/static/global/minus_button2.png" alt="-" style="position: absolute; width: 22px; top: 50%; left:calc(50% - 7vw);">
             {% endif %}
 
             {% if "3PR" in player.treatment %}
-                <img src="/static/global/plus_button.png" alt="+" style="position: absolute; width: 1.8vw; top: 50%; left:calc(50% - 7vw);">
+                <img src="/static/global/plus_button.png" alt="+" style="position: absolute; width: 22px; top: 50%; left:calc(50% - 7vw);">
             {% endif %}
 
             {% if "3PC" in player.treatment %}
-                <img src="/static/global/plus_button.png" alt="+" style="position: absolute; width: 1.8vw; top: 50%; left:calc(50% + 6vw);">
+                <img src="/static/global/plus_button.png" alt="+" style="position: absolute; width: 22px; top: 50%; left:calc(50% + 6vw);">
             {% endif %}
 
             {% if "2PP" in player.treatment %}
-                <img src="/static/global/minus_button2.png" alt="-" style="position: absolute; width: 1.8vw; top: -41%; left:calc(50% + 2vw);;">
-                <img src="/static/global/punish arrow grey.png" alt="-" style="position: absolute; width: 8vw; top: -25%; left:calc(50% - 4.2vw);">
+                <img src="/static/global/minus_button2.png" alt="-" style="position: absolute; width: 22px; top: -50%; left:calc(50% - 12px);">
+                    <img src="/static/global/punish arrow grey.png" alt="-" style="position: absolute; width: 85px; top: -28%; left:calc(50% - 45px);">
             {% endif %}
 
         </div>
@@ -749,31 +750,32 @@
             <div class="figure-container {% if '2PP' in player.treatment or '0DG' in player.treatment %}short-figure-container{% endif %}">
 
                 {% if dic_identity != "baseline"%}
-                    <img src="" style='width:12vw; position:absolute; z-index: -1; top: -25%; left:calc(50% + 9vw)' class='receiverCountry'>
-                    <img src="" style='width:12vw; position:absolute; z-index: -1; top: -25%; left:calc(50% - 21vw)' class='dictatorCountry'>
+                    <img src="" style='width:100px; position:absolute; z-index: -1; top: -18%; left:calc(50% + 75px)' class='receiverCountry'>
+                    <img src="" style='width:100px; position:absolute; z-index: -1; top: -18%; left:calc(50% - 176px)' class='dictatorCountry'>
 
-                    <img src="" style='width:10vw; position:absolute; top:3.8vw; left:calc(50% + 13vw)' class='receiverCountryMap'>
-                    <img src="" style='width:10vw; position:absolute; top:3.8vw; left:calc(50% - 23.5vw)' class='dictatorCountryMap'>
+                    <img src="" style='width:60px; position:absolute; top:28px; left:calc(50% + 125px)' class='receiverCountryMap'>
+                    <img src="" style='width:60px; position:absolute; top:28px; left:calc(50% - 187px)' class='dictatorCountryMap'>
                 {% endif %}
 
                 <img src="/static/{{ image }}" style="width:280px; top:3vw; ">
 
                 {% if "0DG" in player.treatment or "2PP" in player.treatment %}
-                <div class="person-a" style="top:6vm">
-                    <b>PERSON A</b>
-                </div>
-                <div class="person-b" style="top:3vm">
-                    <b>PERSON B</b>
-                </div>
+
+                    <div class="person-a" style="top:65px">
+                        <b>PERSON A</b>
+                    </div>
+                    <div class="person-b" style="top:65px">
+                        <b>PERSON B</b>
+                    </div>
 
                 {% else %}
 
-                <div class="person-a" style="top:29%">
-                    <b>PERSON A</b>
-                </div>
-                <div class="person-b" style="top:29%">
-                    <b>PERSON B</b>
-                </div>
+                    <div class="person-a" style="top:65px">
+                        <b>PERSON A</b>
+                    </div>
+                    <div class="person-b" style="top:65px">
+                        <b>PERSON B</b>
+                    </div>
 
                     {% if "3PP" in player.treatment or "3PR" in player.treatment or "3PC" in player.treatment %}
                     <div class="person-c">
@@ -793,20 +795,20 @@
 
 
                 {% if "3PP" in player.treatment or "3PC" in player.treatment or player.treatment in C.COUNTRY_LIST %}
-                    <img src="/static/global/minus_button2.png" alt="-" style="position: absolute; width: 1.8vw; top: 50%; left:calc(50% - 7vw);">
+                    <img src="/static/global/minus_button2.png" alt="-" style="position: absolute; width: 22px; top: 50%; left:calc(50% - 75px);">
                 {% endif %}
 
                 {% if "3PR" in player.treatment %}
-                    <img src="/static/global/plus_button.png" alt="+" style="position: absolute; width: 1.8vw; top: 50%; left:calc(50% - 7vw);">
+                    <img src="/static/global/plus_button.png" alt="+" style="position: absolute; width: 22px; top: 50%; left:calc(50% - 75px);">
                 {% endif %}
 
                 {% if "3PC" in player.treatment %}
-                    <img src="/static/global/plus_button.png" alt="+" style="position: absolute; width: 1.8vw; top: 50%; left:calc(50% + 6vw);">
+                    <img src="/static/global/plus_button.png" alt="+" style="position: absolute; width: 22px; top: 50%; left:calc(50% + 6vw);">
                 {% endif %}
 
                 {% if "2PP" in player.treatment %}
-                    <img src="/static/global/minus_button2.png" alt="-" style="position: absolute; width: 1.8vw; top: -41%; left:calc(50% - 1vw);">
-                    <img src="/static/global/punish arrow grey.png" alt="-" style="position: absolute; width: 8vw; top: -25%; left:calc(50% - 4.2vw);">
+                    <img src="/static/global/minus_button2.png" alt="-" style="position: absolute; width: 22px; top: -50%; left:calc(50% - 12px);">
+                    <img src="/static/global/punish arrow grey.png" alt="-" style="position: absolute; width: 85px; top: -28%; left:calc(50% - 45px);">
                 {% endif %}
 
                 {% if "2PP" in player.treatment or "0DG" in player.treatment %}
