--- a/baseline_trials/Introduction.html
+++ b/baseline_trials/Introduction.html
@@ -13,17 +13,8 @@
 
 {{ block style }}
 
-    <style>
-
-        body {
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin-top: 4vw;
-            background-color: #f4f4f4;
-        }
-
-    </style>
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'shared_styles.css' %}">
 
 {{ endblock }}
 
