--- a/baseline_trials/AttentionCheckPage.html
+++ b/baseline_trials/AttentionCheckPage.html
@@ -21,6 +21,8 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'shared_styles.css' %}">
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js" ></script>
 
@@ -129,14 +131,6 @@
 
     <style>
 
-        body {
-            justify-content: center;
-        align-items: center;
-        height: 100vh;
-        margin-top: 4vw;
-        background-color: #f4f4f4;
-    }
-
     .comprehension-row {
         display: flex;
         flex-direction: column; /* Stack items vertically */
@@ -165,7 +159,6 @@
         align-items: center; /* Ensures proper vertical alignment */
     }
 
-
     .comprehension_option {
         width: 90%; /* Width scales with viewport width */
         height: 3vw; /* Height scales with viewport width */
@@ -182,7 +175,6 @@
         font-family: Arial, Helvetica, sans-serif;
         transition: background-color 0.3s ease;
     }
-
 
     .comprehension_option:hover {
         background-color: #ffcc00; /* Change background color on hover */
@@ -202,35 +194,6 @@
         color:#d3d3d3;
         cursor: not-allowed;
         pointer-events: none; /* Disable interactions */
-    }
-
-    .responsive-div {
-      width: 90%; /* Default width */
-      transform-origin: top left; /* Ensure scaling starts from top-left */
-      transform: scale(1); /* Default scale */
-      transition: transform 0.3s ease; /* Smooth scaling */
-      /*border:1px solid black;*/
-      margin-left:auto;
-      margin-right:auto;
-    }
-
-    .container {
-        width:45%;
-        height:25vw;
-        margin-left:auto;
-        margin-right:auto;
-        border:0px solid black;
-        position:relative;
-    }
-
-    .reminder {
-        background-color: #e0f0ff;
-        color: #004080;
-        border: 1px solid #004080;
-        padding: 8px;
-        margin-top: 15px;
-        border-radius: 5px;
-        font-size: 14px;
     }
 
     .comprehension-error-red {
@@ -253,50 +216,6 @@
         margin-bottom: 15px; /* Spacing below the error */
         display: none; /* Initially hidden */
         /*font-size: 14px;*/
-    }
-
-    .short-container {
-        width:45%;
-        height:15vw;  # shorter for dictator
-        margin-left:auto;
-        margin-right:auto;
-        border:0px solid black;
-        position:relative;
-    }
-
-    @media (max-width: 1200px) {
-      .responsive-div {
-        transform: scale(1.0); /* Scale to 80% for smaller screens */
-      }
-      .container {
-          margin-left:10vw;
-      }
-      .numbers {
-          position:absolute;
-          transform: scale(0.95);
-          left:6vw;
-      }
-    }
-
-    @media (max-width: 800px) {
-      .responsive-div {
-        transform: scale(2); /* Scale to 60% for even smaller screens */
-      }
-      .container {
-          margin-left:1vw;
-      }
-      .short.container {
-          margin-left:1vw;
-      }
-      .numbers {
-          position:absolute;
-          transform: scale(0.95);
-          left:-3.2vw;
-      }
-      .number {
-          font-size:2vw;
-          border-width:1px;
-      }
     }
 
 </style>
@@ -334,23 +253,21 @@
         Wrong answer! Please select the correct answer.
     </div>
 
-    <div class="container">
+    <div class="figure-container">
 
-            <img src="/static/global/treatments/3PP punish.png" style="width:27vw; position:absolute; left:-25%; top:0vw">
+            <img class="scenario_image" alt="figure with characters giving or receiver coins" src="/static/global/treatments/3PP punish.png">
 
-                <p>
-                    <b style="position: absolute; top: 23%; left:-25%;">PERSON A</b>
-                </p>
+            <div class="person-a">
+                <b>PERSON A</b>
+            </div>
+            <div class="person-b">
+                <b>PERSON B</b>
+            </div>
+            <div class="person-c">
+                <b>PERSON C</b>
+            </div>
 
-                <p>
-                    <b style="position: absolute; top: 23%; right:-12%;">PERSON B</b>
-                </p>
-
-                <p>
-                    <b style="position: absolute; top: 74%; left:34%;">PERSON C</b>
-                </p>
-
-            <img src="/static/global/minus_button2.png" alt="-" style="position: absolute; width: 1.8vw; top: 42%; left: 11%;">
+            <img class="minus-button-3PP" src="/static/global/minus_button2.png" alt="-">
 
         </div>
 
