--- a/baseline_trials/DictatorPage.html
+++ b/baseline_trials/DictatorPage.html
@@ -95,7 +95,7 @@
                 }
                 // receiver stack
                 for (let i = 0; i < receiverGets; i++) {
-                    $(`.coinstackR[data-index="${index}"]`).append('<div class="coinR" style="left:calc(30% - 2px)"></div>');
+                    $(`.coinstackR[data-index="${index}"]`).append('<div class="coinR" style="left:calc(50% - 2px)"></div>');
                 }
                 // number labels
                 $('#countD[data-index="' + index + '"]').text(`${dictatorKeeps}`);
@@ -316,14 +316,10 @@
             </div>
 
             <span class='coinstack coinstackD' data-index="{{ dic_norm_decision.index }}"></span>
-            <div class="coin-count-labelD" id="countD"
-                 style="{% if '2PP' in player.treatment or '0DG' in player.treatment %}top: 50%;{% endif %}"
-                 data-index="{{ dic_norm_decision.index }}"></div>
+            <div class="coin-count-labelD" id="countD" data-index="{{ dic_norm_decision.index }}"></div>
 
             <span class='coinstack coinstackR' data-index="{{ dic_norm_decision.index }}"></span>
-            <div class="coin-count-labelR" id="countR"
-                 style="{% if '2PP' in player.treatment or '0DG' in player.treatment %}top: 5%;{% endif %}"
-                 data-index="{{ dic_norm_decision.index }}"></div>
+            <div class="coin-count-labelR" id="countR" data-index="{{ dic_norm_decision.index }}"></div>
 
             {% if "3PP" in player.treatment or "3PC" in player.treatment or player.treatment in C.COUNTRY_LIST %}
                 <img class="minus-button-3PP" src="/static/global/minus_button2.png" alt="-">
@@ -435,12 +431,10 @@
                 {% endif %}
 
                 <span class='coinstack coinstackD'></span>
-                <div class="coin-count-labelD" id="countD"
-                     style="{% if '2PP' in player.treatment or '0DG' in player.treatment %}top: 50%;{% endif %}"></div>
+                <div class="coin-count-labelD" id="countD"></div>
 
                 <span class='coinstack coinstackR'></span>
-                <div class="coin-count-labelR" id="countR"
-                     style="{% if '2PP' in player.treatment or '0DG' in player.treatment %}top: 5%;{% endif %}"></div>
+                <div class="coin-count-labelR" id="countR"></div>
 
                 {% if "3PP" in player.treatment or "3PC" in player.treatment or player.treatment in C.COUNTRY_LIST %}
                     <img class="minus-button-3PP" src="/static/global/minus_button2.png" alt="-">
@@ -459,15 +453,10 @@
                     <img class="punish-arrow-2PP" src="/static/global/punish arrow grey.png" alt="-">
                 {% endif %}
 
-                {% if "2PP" in player.treatment or "0DG" in player.treatment %}
-                    <div class="you">
-                        <b>YOU</b>
-                    </div>
-                {% else %}
-                    <div class="you">
-                        <b>YOU</b>
-                    </div>
-                {% endif %}
+                <div class="you-dictator">
+                    <b>YOU</b>
+                </div>
+
 
             </div>
 
