--- a/baseline_trials/instructionPage.html
+++ b/baseline_trials/instructionPage.html
@@ -558,8 +558,7 @@
 
         <div class="figure-container short-figure-container">
 
-            <img src="/static/global/treatments/0DG give.png"
-                 style="width:27vw; top:0vw">
+            <img class="scenario_image" alt="figure with characters giving or receiver coins" src="/static/global/treatments/0DG give.png">
 
             <div class="person-a">
                 <b>PERSON A</b>
