--- a/baseline_trials/Introduction.html
+++ b/baseline_trials/Introduction.html
@@ -69,8 +69,7 @@
     </b>
 
 
-
-    <div style="display: flex; justify-content: flex-end">
+    <div style="display: flex; justify-content: flex-end; margin-top: 20px">
         <button style="
                     color: #fff;
                     background-color: #007bff;
